--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -21,6 +21,7 @@
 @import "blocks/news";
 @import "blocks/article-card";
 @import "blocks/article-text";
+@import "blocks/quote";
 @import "blocks/news-container";
 @import "blocks/subscribe";
 @import "blocks/main-footer";
