--- a/resources/sass/blocks/pagination-banners.scss
+++ b/resources/sass/blocks/pagination-banners.scss
@@ -1,25 +1,26 @@
 .pagination-banners {
     justify-content: center;
     margin-bottom: 3rem;
-}
 
-.pagination-banners__item {
+    & .page-item {
+        margin: 0 3px;
 
-    & a {
-        border-radius: 50%;
-    }
+        & .page-link {
+            border-radius: 50%;
+        }
 
-    &:first-child .page-link{
-        border-top-left-radius: 50%;
-        border-bottom-left-radius: 50%;
-        color: $brown-light;
-        border-color: $brown-light;
-    }
+        &:first-child .page-link{
+            border-top-left-radius: 50%;
+            border-bottom-left-radius: 50%;
+            color: $brown-light;
+            border-color: $brown-light;
+        }
 
-    &:last-child .page-link {
-        border-top-right-radius: 50%;
-        border-bottom-right-radius: 50%;
-        color: $brown-light;
-        border-color: $brown-light;
+        &:last-child .page-link {
+            border-top-right-radius: 50%;
+            border-bottom-right-radius: 50%;
+            color: $brown-light;
+            border-color: $brown-light;
+        }
     }
 }
