--- a/public/admin/css/laraspace.css
+++ b/public/admin/css/laraspace.css
@@ -18904,10 +18904,19 @@ ____.dashbox:hover {
   letter-spacing: 0.04em;
   text-transform: uppercase;
   font-size: 12px;
+  margin-bottom: 1.5rem;
 }
 
 .top-banner__title {
   color: #ffffff;
+}
+
+.top-banner strong {
+  display: inline-block;
+  margin-bottom: 10px;
+  font-size: 30px;
+  line-height: 1.2;
+  font-weight: 700;
 }
 
 .top-banner--main {
@@ -18917,7 +18926,6 @@ ____.dashbox:hover {
 .top-banner--main__title {
   font-size: 2rem;
   margin-bottom: 1rem;
-  margin-top: 1rem;
 }
 
 .top-banner--main__text {
@@ -18929,7 +18937,8 @@ ____.dashbox:hover {
 }
 
 .top-banner__container {
-  padding: 2rem 0;
+  padding-top: 2rem;
+  padding-bottom: 4rem;
 }
 
 @media (min-width: 720px) {
@@ -18939,20 +18948,19 @@ ____.dashbox:hover {
 
   .top-banner--main__title {
     margin-bottom: 2rem;
-    margin-top: 2rem;
     font-size: 62px;
   }
 }
 
 @media (min-width: 992px) {
-  .top-banner__text {
+  .top-banner__text,
+  .top-banner strong {
     width: 80%;
   }
 
   .top-banner__title {
     width: 80%;
     font-size: 3.8rem;
-    margin-top: 1rem;
   }
 
   .top-banner--main__title {
@@ -18967,7 +18975,8 @@ ____.dashbox:hover {
 
 @media (min-width: 1200px) {
   .top-banner__title,
-  .top-banner__text {
+  .top-banner__text,
+  .top-banner strong {
     width: 65%;
     max-width: 790px;
   }
