--- a/resources/sass/blocks/social.scss
+++ b/resources/sass/blocks/social.scss
@@ -4,12 +4,19 @@
     list-style: none;
     margin: 0;
 
-    &__link:focus,
-    &__link:hover, {
-        opacity: 0.7;
+    &__link {
+
+        &:focus,
+        &:hover, {
+            opacity: 0.7;
+        }
+
+        & img {
+            width: 71px;
+            height: 71px;
+        }
     }
 }
-
 
 @include media-breakpoint-up(lg) {
     .social {
