--- a/resources/sass/blocks/banner.scss
+++ b/resources/sass/blocks/banner.scss
@@ -11,7 +11,7 @@
     color: $black;
     transition: all $duration $transition-style;
     background-size: cover;
-    background-position: center;
+    background-position: 0 50%;
     font-weight: 700;
 
     &:focus,
