--- a/resources/sass/blocks/main-navbar.scss
+++ b/resources/sass/blocks/main-navbar.scss
@@ -1,6 +1,7 @@
 .main-navbar {
     background-color: $white;
     padding: 0;
+    margin-top: -6px;
 
     & .show {
         background-color: $gray-200;
@@ -31,6 +32,7 @@
 
     & i {
         line-height: 26px;
+        margin-right: 12px;
     }
 }
 
@@ -65,27 +67,47 @@
         font-size: 22px;
         line-height: 20px;
         padding-top: 0.75rem;
-        padding-bottom: 1.2rem;
+        padding-bottom: 1.5rem;
+        padding-left: 15px;
         border-top: 1.2rem solid transparent;
 
         & i {
             line-height: 20px;
+            margin-right: 7px;
         }
     }
 
     .main-navbar {
-        min-height: $height-navbar-lg;
+        height: 100%;
 
         & .nav-item {
             width: 20%;
-            max-width: 220px;
             margin-bottom: 0;
+            height: 100%;
+
+            & .main-navbar__link {
+                justify-content: center;
+            }
 
             &:nth-last-child(-n+3) {
 
                 & .main-navbar__dropdown-menu {
                     left: auto;
                     right: 0;
+                }
+            }
+
+            &:first-child {
+                .main-navbar__link {
+                    justify-content: flex-start;
+                }
+            }
+
+            &:last-child {
+                margin-right: 0!important;
+
+                .main-navbar__link {
+                    justify-content: flex-end;
                 }
             }
         }
