--- a/resources/sass/blocks/news.scss
+++ b/resources/sass/blocks/news.scss
@@ -1,6 +1,6 @@
 .news__link {
     color: $black;
-    font-size: 33px;
+    font-size: 27px;
 
     &:focus,
     &:hover,
@@ -14,25 +14,29 @@
     color: $gray-700;
     display: block;
     width: 100%;
-    margin: 1.5rem 0;
+    margin: 1rem 0;
     text-transform: uppercase;
     font-size: 21px;
 }
 
-.news__description {
-    font-size: 27px;
+.news__title {
+    font-size: 33px;
+    font-weight: 700;
 }
+
 
 @include  media-breakpoint-up(lg) {
     .news__link {
-        font-size: 22px;
+        font-size: 18px;
     }
 
     .news__date {
         font-size: 14px;
+        margin: 0.5rem;
+        font-weight: 700;
     }
 
-    .news__description {
-        font-size: 18px;
+    .news__title {
+        font-size: 22px;
     }
 }
