--- a/resources/sass/blocks/social.scss
+++ b/resources/sass/blocks/social.scss
@@ -23,3 +23,9 @@
         justify-content: flex-start;
     }
 }
+
+@include  media-breakpoint-up(xxl) {
+    .social {
+        padding-left: 105px!important;
+    }
+}
