--- a/resources/sass/blocks/main-header.scss
+++ b/resources/sass/blocks/main-header.scss
@@ -1,4 +1,9 @@
 .main-header {
     font-size: 0.85rem;
     line-height: 20px;
+    background-color: $white;
+
+    &--gray {
+        background-color: $gray-100;
+    }
 }
