--- a/resources/sass/blocks/main-navbar.scss
+++ b/resources/sass/blocks/main-navbar.scss
@@ -1,5 +1,5 @@
 .main-navbar {
-    background-color: $white;
+    background-color: transparent;
     padding: 0;
     margin-top: -6px;
 
@@ -33,6 +33,7 @@
     & i {
         line-height: 26px;
         margin-right: 12px;
+        padding-right: 8px;
     }
 }
 
@@ -60,7 +61,7 @@
     }
 }
 
-@include  media-breakpoint-up(lg) {
+@include  media-breakpoint-up(xl) {
     .main-navbar__link {
         height: 100%;
         background-color: $white;
@@ -68,12 +69,12 @@
         line-height: 20px;
         padding-top: 0.75rem;
         padding-bottom: 1.5rem;
-        padding-left: 15px;
         border-top: 1.2rem solid transparent;
 
         & i {
             line-height: 20px;
             margin-right: 7px;
+            // margin-left: 15px;
         }
     }
 
@@ -81,7 +82,6 @@
         height: 100%;
 
         & .nav-item {
-            width: 20%;
             margin-bottom: 0;
             height: 100%;
 
