Добавлена отправка письма при подписке на новости. Исправлен дизайн цитаты в админ панели. Добавлена консольная команда для регистрации пользователя

--- a/resources/admin/sass/laraspace.scss
+++ b/resources/admin/sass/laraspace.scss
@@ -85,3 +85,4 @@
 @import '../../sass/variables';
 @import '../../sass/blocks/top-banner';
 @import '../../sass/blocks/banner';
+@import '../../sass/blocks/quote';
