--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+
 /*!
  * Bootstrap v4.3.1 (https://getbootstrap.com/)
  * Copyright 2011-2019 The Bootstrap Authors
@@ -11763,9 +11765,8 @@ body.ckeditor {
     background-color: #ffffff;
     font-size: 22px;
     line-height: 20px;
-    padding-top: 0.75rem;
+    padding-top: 1.95rem;
     padding-bottom: 1.5rem;
-    border-top: 1.2rem solid transparent;
   }
 
   .main-navbar__link i {
@@ -11808,7 +11809,8 @@ body.ckeditor {
   }
 
   .main-navbar .navbar-nav .show > .nav-link {
-    border-top: 1.2rem solid #38c172;
+    padding-top: 0.75rem;
+    border-top: 1.2rem solid transparent;
     box-shadow: 0px -5px 4px 0px rgba(0, 0, 0, 0.19);
     position: relative;
     z-index: 10000;
