--- a/resources/sass/blocks/article-card.scss
+++ b/resources/sass/blocks/article-card.scss
@@ -5,17 +5,18 @@
     padding-left: 0;
     padding-right: 0;
     flex-direction: column;
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
 }
 
 @include  media-breakpoint-up(lg) {
     .article-card {
         order: 3;
         flex-direction: row;
-        margin: 3rem 0;
+        margin-bottom: 3rem;
+        margin-top: 1rem;
 
         & .banner__text-preview {
-            font-size: 0.95rem;
+            font-size: 1rem;
             width: 100%;
         }
     }
