--- a/resources/sass/blocks/banner.scss
+++ b/resources/sass/blocks/banner.scss
@@ -35,7 +35,7 @@
     font-size: 1.25rem;
     margin-bottom: 1rem;
     letter-spacing: 0.04em;
-    // font-size: 24px;
+    font-size: 24px;
     font-weight: 700;
     border: none;
 
@@ -49,8 +49,7 @@
 .banner__title {
     color: $white;
     background-color: $blue;
-    font-size: 1.15rem;
-    // font-size: 22px;
+    font-size: 22px;
     padding: 0.5rem 0;
     padding-left: (100% - map-get($container, xs))/2;
     padding-right: 1rem;
@@ -60,8 +59,7 @@
 }
 
 .banner__text-preview {
-    font-size: 1.6rem;
-    // font-size: 30px;
+    font-size: 1.2rem;
     margin-bottom: 0;
     color: $black;
 }
