--- a/resources/sass/blocks/btn-subscribe.scss
+++ b/resources/sass/blocks/btn-subscribe.scss
@@ -1,10 +1,10 @@
 .btn-subscribe {
-    padding: 1.5rem;
-    font-size: 27px;
+    padding: 0.7rem;
+    font-size: 1.4rem;
     font-weight: 700;
     border-radius: 8rem;
-    margin-top: 3rem;
-    margin-bottom: 4rem;
+    margin-top: 2.5rem;
+    margin-bottom: 3.5rem;
     background-image: url("../images/btn-bg.png");
     background-size: cover;
     background-position: center;
@@ -14,7 +14,8 @@
         background-image: none;
         margin: 0;
         margin-bottom: 3rem;
-        padding: 0.45rem 1rem;
+        padding: 0.3rem 1rem;
+        font-size: 1.2rem;
 
         &:focus,
         &:hover {
@@ -26,11 +27,12 @@
 
 @include  media-breakpoint-up(lg) {
     .btn-subscribe {
-        padding: 0.7rem 1rem;
+        padding: 0.5rem 1rem;
         margin-top: 0;
+        font-size: 1.3rem;
 
         &--empty {
-            padding: 0.45rem 1rem;
+            padding: 0.3rem 1rem;
         }
     }
 }
