--- a/resources/sass/blocks/news.scss
+++ b/resources/sass/blocks/news.scss
@@ -1,6 +1,6 @@
 .news__link {
     color: $black;
-    font-size: 27px;
+    font-size: 1.4rem;
 
     &:focus,
     &:hover,
@@ -16,11 +16,11 @@
     width: 100%;
     margin: 1rem 0;
     text-transform: uppercase;
-    font-size: 21px;
+    font-size: 1rem;
 }
 
 .news__title {
-    font-size: 33px;
+    font-size: 1.8rem;
     font-weight: 700;
 }
 
@@ -32,7 +32,6 @@
 
     .news__date {
         font-size: 14px;
-        margin: 0.5rem;
         font-weight: 700;
     }
 
