--- a/resources/sass/blocks/quote.scss
+++ b/resources/sass/blocks/quote.scss
@@ -1,8 +1,8 @@
 .quote {
     display: flex;
 
-    h5 {
-        font-size: 24px;
+    p {
+        font-size: 18px;
         line-height: 1.2;
         font-weight: 700;
         margin-bottom: 20px;
@@ -26,7 +26,6 @@
 }
 
 .quote__img {
-    min-height: 350px;
     overflow: hidden;
 
     img {
