--- a/resources/sass/blocks/subscribe.scss
+++ b/resources/sass/blocks/subscribe.scss
@@ -1,8 +1,14 @@
+.subscribe {
+
+    & label {
+        font-size: 18px;
+        margin-bottom: 0;
+    }
+}
+
 .subscribe__text {
-    // font-size: 0.95rem;
-    // line-height: 1rem;
-     font-size: 24px;
-     line-height: 35px;
+     font-size: 22px;
+     line-height: 32px;
 }
 
 @include  media-breakpoint-up(lg) {
