изменила размер баннеров и шрифт в меню

--- a/resources/sass/blocks/banner.scss
+++ b/resources/sass/blocks/banner.scss
@@ -13,6 +13,7 @@
     background-size: cover;
     background-position: 0 50%;
     font-weight: 700;
+    min-height: 400px;
 
     &:focus,
     &:hover {
