--- a/resources/sass/blocks/main-navbar.scss
+++ b/resources/sass/blocks/main-navbar.scss
@@ -26,13 +26,13 @@
 .main-navbar__link {
     display: flex;
     color: $gray-900;
-    font-size: 28px;
-    line-height: 26px;
+    font-size: 22px;
+    line-height: 1;
     letter-spacing: -0.02em;
     padding-bottom: 1.2rem;
 
     & i {
-        line-height: 26px;
+        line-height: 22px;
         margin-right: 12px;
         padding-right: 8px;
     }
@@ -50,8 +50,8 @@
     & .dropdown-item {
         background-color: transparent;
         margin-bottom: 20px;
-        font-size: 28px;
-        line-height: 28px;
+        font-size: 20px;
+        line-height: 18px;
         letter-spacing: -0.02em;
         font-weight: 700;
 
@@ -66,8 +66,8 @@
     .main-navbar__link {
         height: 100%;
         background-color: $white;
-        font-size: 22px;
-        line-height: 20px;
+        font-size: 20px;
+        line-height: 1;
         padding-top: 1.95rem;
         padding-bottom: 1.5rem;
 
@@ -83,6 +83,7 @@
         & .nav-item {
             margin-bottom: 0;
             height: 100%;
+            max-width: 16%;
 
             & .main-navbar__link {
                 justify-content: center;
@@ -128,18 +129,19 @@
     .main-navbar__list {
         width: 100%;
         justify-content: space-between;
+        flex-wrap: wrap;
     }
 
     .main-navbar__dropdown-menu {
         margin: 0;
         box-shadow: 0px 0px 4px 0px rgba($black,0.19);
         top: 98%;
-        width: 400px;
+        width: 380px;
         padding-bottom: 3rem;
 
         & .dropdown-item {
-            font-size: 22px;
-            line-height: 20px;
+            font-size: 18px;
+            line-height: 1;
             letter-spacing: -0.02em;
             white-space: normal;
         }
