добавила теги и исправила заголовок у баннеров

--- a/resources/sass/blocks/banner.scss
+++ b/resources/sass/blocks/banner.scss
@@ -92,13 +92,13 @@
     }
 
     .banner__name-page {
-        font-size: 0.71rem;
+        font-size: 18px;
         letter-spacing: 0.02em;
         width: 100%;
     }
 
     .banner__title {
-        font-size: 0.71rem;
+        font-size: 18px;
         margin-bottom: 2rem;
         padding-left: 2rem;
         width: 70%;
