--- a/resources/sass/blocks/article-text.scss
+++ b/resources/sass/blocks/article-text.scss
@@ -2,11 +2,28 @@
     margin-bottom: 3rem;
     font-size: 18px;
 
+    h2 {
+        font-size: 18px;
+        line-height: 1.2;
+    }
+
     h3 {
         font-size: 26px;
         line-height: 1.2;
         margin-bottom: 30px;
         font-weight: 700;
+    }
+
+    strong {
+        font-weight: 700;
+        font-size: 30px;
+        line-height: 1.2;
+    }
+
+    h4 {
+        font-weight: 700;
+        font-size: 30px;
+        line-height: 1.2;
     }
 
     img {
