--- a/resources/sass/blocks/article-text.scss
+++ b/resources/sass/blocks/article-text.scss
@@ -2,9 +2,10 @@
     margin-bottom: 3rem;
     font-size: 18px;
 
-    h2 {
+    p {
         font-size: 18px;
         line-height: 1.2;
+        font-weight: 400;
     }
 
     h3 {
@@ -12,18 +13,6 @@
         line-height: 1.2;
         margin-bottom: 30px;
         font-weight: 700;
-    }
-
-    strong {
-        font-weight: 700;
-        font-size: 30px;
-        line-height: 1.2;
-    }
-
-    h4 {
-        font-weight: 700;
-        font-size: 30px;
-        line-height: 1.2;
     }
 
     img {
