fixed #PPRS-41 fixed #PPRS-42

--- a/resources/sass/blocks/top-banner.scss
+++ b/resources/sass/blocks/top-banner.scss
@@ -36,7 +36,7 @@
 
     &--main {
         background-color: $yellow;
-        background-image: url("../images/top-banners-main.png");
+        background-image: url("../images/mainpage_1800_02.jpg");
 
         &__title {
             font-size: 2rem;
