Исправлен фон банера главной страницы

--- a/resources/sass/blocks/top-banner.scss
+++ b/resources/sass/blocks/top-banner.scss
@@ -69,7 +69,7 @@
 
         &--main {
             background-color: $yellow;
-            background-image: url("../images/top-banners-main-xl.png");
+            background-image: url("../images/mainpage_1800_02.jpg");
         }
 
         &__title {
