ДОбавлена постраничная навигация #PPRS-43

--- a/resources/sass/blocks/article-card.scss
+++ b/resources/sass/blocks/article-card.scss
@@ -6,6 +6,7 @@
     padding-right: 0;
     flex-direction: column;
     margin-bottom: 2rem;
+    width: 100%;
 }
 
 @include  media-breakpoint-up(lg) {
