--- a/resources/sass/blocks/article-text.scss
+++ b/resources/sass/blocks/article-text.scss
@@ -65,6 +65,11 @@
         width: 100%;
         max-width: 1150px;
         margin: 0;
+        font-size: 16px;
+
+        p {
+            font-size: 16px;
+        }
     }
 
     .article-text__description {
