--- a/resources/sass/blocks/main-navbar.scss
+++ b/resources/sass/blocks/main-navbar.scss
@@ -62,17 +62,17 @@
     }
 }
 
-@include  media-breakpoint-up(xl) {
+@include  media-breakpoint-up(lg) {
     .main-navbar__link {
         height: 100%;
         background-color: $white;
-        font-size: 20px;
+        font-size: 16px;
         line-height: 1;
         padding-top: 1.95rem;
         padding-bottom: 1.5rem;
 
         & i {
-            line-height: 20px;
+            line-height: 16px;
             margin-right: 7px;
         }
     }
@@ -137,10 +137,10 @@
         box-shadow: 0px 0px 4px 0px rgba($black,0.19);
         top: 98%;
         width: 380px;
-        padding-bottom: 3rem;
+        padding-bottom: 2rem;
 
         & .dropdown-item {
-            font-size: 18px;
+            font-size: 14px;
             line-height: 1;
             letter-spacing: -0.02em;
             white-space: normal;
