добавила блюр на баннеры

--- a/resources/sass/blocks/article-text.scss
+++ b/resources/sass/blocks/article-text.scss
@@ -15,6 +15,13 @@
         font-weight: 700;
     }
 
+    h4 {
+        font-size: 24px;
+        line-height: 1.2;
+        margin-bottom: 30px;
+        font-weight: 700;
+    }
+
     img {
         width: 100%;
         height: auto;
