--- a/resources/sass/blocks/banner.scss
+++ b/resources/sass/blocks/banner.scss
@@ -6,12 +6,11 @@
 
 .banner__container {
     display: block;
-    padding: 2.2rem 0;
     background-color: $gray-100;
     color: $black;
     transition: all $duration $transition-style;
-    background-size: cover;
-    background-position: 0 50%;
+    background-size: cover, cover;
+    background-position: 0 50%, 0 50%;
     font-weight: 700;
     min-height: 400px;
 
@@ -29,6 +28,14 @@
     &:active {
         opacity: 0.5;
     }
+}
+
+.banner__bg-blur {
+    background-color:rgba($white, 0.45);
+    width: 100%;
+    height: inherit;
+    min-height: inherit;
+    padding: 2.2rem 0;
 }
 
 .banner__name-page {
@@ -73,10 +80,13 @@
 
 @include  media-breakpoint-up(lg) {
     .banner__container {
-        padding: 2.5rem 0;
         background-size:  cover;
         background-position: 50% 100%;
         background-repeat: no-repeat;
+
+        & .banner__bg-blur {
+            padding: 2.5rem 0;
+        }
 
         & .main-container {
             width: 100%;
