добавила мах-width

--- a/resources/sass/blocks/banner.scss
+++ b/resources/sass/blocks/banner.scss
@@ -13,6 +13,7 @@
     background-position: 0 50%, 0 50%;
     font-weight: 700;
     min-height: 400px;
+    position: relative;
 
     &:focus,
     &:hover {
