--- a/resources/sass/blocks/article-card.scss
+++ b/resources/sass/blocks/article-card.scss
@@ -1,7 +1,6 @@
 .article-card {
-    order: 2;
-    margin-left: 0;
-    margin-right: 0;
+    display: flex;
+    margin: 0;
     padding-left: 0;
     padding-right: 0;
     flex-direction: column;
@@ -11,10 +10,9 @@
 
 @include  media-breakpoint-up(lg) {
     .article-card {
-        order: 3;
         flex-direction: row;
-        margin-bottom: 3rem;
         margin-top: 1rem;
+        margin: 0 -15px;
 
         & .banner__text-preview {
             font-size: 1rem;
@@ -23,6 +21,7 @@
 
         & .card {
             min-width: 270px;
+            padding: 0 15px;
         }
     }
 }
